trying to improve per class time slots
